--- a/app/src/main/res/layout/order_details_activity.xml
+++ b/app/src/main/res/layout/order_details_activity.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#F5F5F5"
-    android:padding="24dp"
-    tools:context=".OrderDetailsActivity">
+    android:padding="24dp">
 
     <TextView
         android:id="@+id/tv_title"
@@ -17,15 +16,13 @@
         android:textStyle="bold"
         android:textColor="#333333"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/order_items_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="24dp"
-        app:layout_constraintVertical_weight="1"
         app:layout_constraintTop_toBottomOf="@+id/tv_title"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -133,7 +130,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginEnd="8dp"
-            android:text="Bayar dengan QRIS"
+            android:text="QRIS"
             android:backgroundTint="#741d1d"
             android:textColor="@android:color/white"
             app:cornerRadius="8dp" />
@@ -144,7 +141,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_marginStart="8dp"
-            android:text="Bayar Tunai"
+            android:text="Tunai"
             android:backgroundTint="#CCCCCC"
             android:textColor="#333333"
             app:cornerRadius="8dp" />
